--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "angular-6-social-login": "^1.1.1",
     "angular-datatables": "^9.0.2",
     "bootstrap": "^4.5.2",
     "datatables.net": "^1.10.22",
