--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.3",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
     "@angular/core": "~8.0.3",
     "@angular/forms": "~8.0.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
@@ -24,6 +26,7 @@
     "bootstrap": "^4.5.2",
     "datatables.net": "^1.10.22",
     "datatables.net-dt": "^1.10.22",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.4.0",
