--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "datatables.net-dt": "^1.10.22",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-owl-carousel-o": "^2.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
