--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@angular/router": "~8.0.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "angular-6-social-login": "^1.1.1",
     "angular-datatables": "^9.0.2",
+    "angularx-social-login": "^2.2.1",
     "bootstrap": "^4.5.2",
     "datatables.net": "^1.10.22",
     "datatables.net-dt": "^1.10.22",
